# course_work

./: .gitignore  Cargo.toml  MakeFile.toml  Makefile.toml  Procfile
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: games.rs  locations.rs  loot.rs  mobs.rs  mod.rs  prelude.rs  sqlx_migrations.rs  users.rs
frontend/: Cargo.toml  index.html  index.scss  styles.css
frontend/pkg/: package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
frontend/src/: app.rs  dummy.rs  lib.rs  support.rs  switch.rs
frontend/src/pages/: add_new.rs  delete.rs  edit_content.rs  index.rs  index_game.rs  index_related.rs  mod.rs  page_not_found.rs  viewer.rs
frontend/src/pages/admin/: add_new.rs  delete.rs  edit_content.rs  mod.rs
middleware/: Cargo.toml
middleware/src/: lib.rs
migrations/: 20211221101704_games.sql  20211221101709_locations.sql  20211221101712_mobs.sql  20211221101715_loot.sql
static/: index.html  main.js  package.d.ts  package.js  package_bg.wasm  package_bg.wasm.d.ts
