[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
middleware = {path = "../middleware"}
dotenv = "0.15.0"
actix-web = {version = "4.0.0-beta.14", features = ["rustls"]}
actix-files = "0.6.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.4.2", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }
#что-то на админку может позже https://lib.rs/crates/actix-web-grants